--- a/articles/active-directory/develop/index.yml
+++ b/articles/active-directory/develop/index.yml
@@ -9,12 +9,12 @@ metadata:
   ms.service: active-directory
   ms.subservice: develop
   ms.workload: identity
-  ms.openlocfilehash: 115c2b7058941512bf75f2b45b17d4a0a806c1af
-  ms.sourcegitcommit: 56cbd6d97cb52e61ceb6d3894abe1977713354d9
+  ms.openlocfilehash: f6893522b66f20dd26905084e5b09d303cbfd5b3
+  ms.sourcegitcommit: f845ca2f4b626ef9db73b88ca71279ac80538559
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 08/20/2020
-  ms.locfileid: "88690291"
+  ms.lasthandoff: 09/09/2020
+  ms.locfileid: "89612770"
 landingContent:
 - title: Microsoft ID プラットフォームについて
   linkLists:
@@ -120,6 +120,14 @@ landingContent:
   linkLists:
   - linkListType: whats-new
     links:
+    - text: クイック スタート:アプリを登録する (改訂)
+      url: quickstart-register-app.md
+    - text: クイック スタート:Web API を公開する (改訂)
+      url: quickstart-configure-app-expose-web-apis.md
+    - text: クイック スタート:Web API にアクセスする (改訂)
+      url: quickstart-configure-app-access-web-apis.md
+    - text: Xamarin Android 仲介型アプリを MSAL.NET に移行する
+      url: msal-net-migration-android-broker.md
     - text: エラーと例外を処理する - Android
       url: msal-android-handling-exceptions.md
     - text: 要求のディレクトリ スキーマ拡張属性
