--- a/articles/resource-mover/index.yml
+++ b/articles/resource-mover/index.yml
@@ -2,7 +2,7 @@
 title: Azure Resource Mover のドキュメント
 summary: Azure Resource Mover ハブでは、Azure リージョン間で Azure リソースを移動します。
 metadata:
-  title: Azure Resource Manager のドキュメント
+  title: Azure Resource Mover のドキュメント
   description: Azure リージョン間の Azure リソースの移動に関するチュートリアルや情報が見つかります。
   ms.service: resource-move
   ms.topic: landing-page
@@ -11,12 +11,12 @@ metadata:
   ms.author: raynew
   ms.date: 09/09/2020
   keywords: azure resource mover, azure regions, move across regions
-  ms.openlocfilehash: 4dec18e3000373953c93ee99a6b5500ffb515807
-  ms.sourcegitcommit: 3be3537ead3388a6810410dfbfe19fc210f89fec
+  ms.openlocfilehash: 3dab9d313ab9564e860d78495d375bd0116ac9e0
+  ms.sourcegitcommit: 5d7f8c57eaae91f7d9cf1f4da059006521ed4f9f
   ms.translationtype: HT
   ms.contentlocale: ja-JP
   ms.lasthandoff: 09/10/2020
-  ms.locfileid: "89652146"
+  ms.locfileid: "89669656"
 landingContent:
 - title: Azure Resource Mover について
   linkLists:
