--- a/articles/storage/queues/TOC.yml
+++ b/articles/storage/queues/TOC.yml
@@ -43,7 +43,7 @@
   items:
     - name: ストレージ アカウント
       href: ../common/storage-account-overview.md?toc=%2fazure%2fstorage%2fqueues%2ftoc.json
-    - name: Security
+    - name: セキュリティ
       items:
         - name: Azure Storage の保存時の暗号化
           href: ../common/storage-service-encryption.md?toc=%2fazure%2fstorage%2fqueues%2ftoc.json
@@ -134,7 +134,7 @@
             - name: ユーザーの承認オプション
               items:
                 - name: ポータル
-                  href: ../common/storage-access-blobs-queues-portal.md?toc=%2fazure%2fstorage%2fqueues%2ftoc.json
+                  href: authorize-queue-access-portal.md
                 - name: PowerShell
                   href: ../common/authorize-active-directory-powershell.md?toc=%2fazure%2fstorage%2fqueues%2ftoc.json
                 - name: Azure CLI
