--- a/articles/machine-learning/index.yml
+++ b/articles/machine-learning/index.yml
@@ -11,51 +11,53 @@ metadata:
   ms.collection: collection
   author: j-martens
   ms.author: jmartens
-  ms.date: 08/17/2020
+  ms.date: 09/17/2020
   ms.custom: contperfq1
-  ms.openlocfilehash: 63e1e9216a5150b957a34e15def9726167694978
-  ms.sourcegitcommit: ef055468d1cb0de4433e1403d6617fede7f5d00e
+  ms.openlocfilehash: 19aba3cd915ac980f2f21e2457365fb6768d10c2
+  ms.sourcegitcommit: 5d7f8c57eaae91f7d9cf1f4da059006521ed4f9f
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 08/16/2020
-  ms.locfileid: "88258710"
+  ms.lasthandoff: 09/10/2020
+  ms.locfileid: "89668801"
 landingContent:
-- title: 機械学習の概要
+- title: 作業を開始しましょう。コード ファースト
   linkLists:
   - linkListType: tutorial
     links:
-    - text: Python ノートブックの使用
+    - text: 作業の開始 (Python)
       url: tutorial-1st-experiment-sdk-setup.md
-    - text: AutoML (コードなし/少量のコード)
-      url: tutorial-first-experiment-automated-ml.md
-    - text: デザイナーで (ドラッグ アンド ドロップ)
-      url: tutorial-designer-automobile-price-train-score.md
-    - text: RStudio の使用
+    - text: ML パイプラインを使用したバッチ推論 (Python)
+      url: tutorial-pipeline-batch-scoring-classification.md
+    - text: 作業の開始 (R)
       url: tutorial-1st-r-experiment.md
+- title: 作業を開始しましょう。コードが少ないか、またはありません
+  linkLists:
+  - linkListType: overview
+    links:
+    - text: Azure Machine Learning Studio
+      url: overview-what-is-machine-learning-studio.md
+    - text: 自動 ML (AutoML) とは
+      url: concept-automated-ml.md
+    - text: ドラッグ アンド ドロップ デザイナーとは
+      url: concept-designer.md
+  - linkListType: tutorial
+    links:
+    - text: AutoML の概要
+      url: tutorial-first-experiment-automated-ml.md
+    - text: デザイナーの概要
+      url: tutorial-designer-automobile-price-train-score.md
+  - linkListType: reference
+    links:
+    - text: デザイナーのアルゴリズムとモジュール
+      url: algorithm-module-reference/module-reference.md
 - title: Azure への ML モデルの持ち込み
   linkLists:
   - linkListType: how-to-guide
     links:
-    - text: ローカル モデルをクラウドにデプロイする
+    - text: モデルをクラウドにデプロイする
       url: how-to-deploy-existing-model.md
-- title: スタジオでの AutoML またはドラッグ アンド ドロップの使用
-  linkLists:
-  - linkListType: overview
-    links:
-    - text: 自動機械学習 (AutoML) とは
-      url: concept-automated-ml.md
-    - text: デザイナー (ドラッグ アンド ドロップ) とは
-      url: concept-designer.md
-    - text: アルゴリズムの選択方法
-      url: how-to-select-algorithms.md
-  - linkListType: tutorial
-    links:
-    - text: 'AutoML: 分類モデルをビルドする'
-      url: tutorial-first-experiment-automated-ml.md
-    - text: 'デザイナー: 自動価格の予測'
-      url: tutorial-designer-automobile-price-train-score.md
-    - text: 分類を行うために画像にラベルを付ける
-      url: tutorial-labeling.md
+    - text: MLflow モデルの追跡とデプロイ
+      url: how-to-use-mlflow.md
 - title: MLOps:モデルの展開と管理
   linkLists:
   - linkListType: how-to-guide
@@ -64,51 +66,11 @@ landingContent:
       url: concept-model-management-and-deployment.md
     - text: デプロイの方法と場所
       url: how-to-deploy-and-where.md
-    - text: リアルタイムの予測
-      url: how-to-consume-web-service.md
-    - text: バッチ予測
-      url: how-to-use-parallel-run-step.md
-    - text: MLOps の例のリポジトリ
-      url: https://github.com/microsoft/MLOps
-- title: Python SDK でトレーニングする
-  linkLists:
-  - linkListType: tutorial
-    links:
-    - text: 初めての ML 実験を作成する
-      url: tutorial-1st-experiment-sdk-setup.md
-    - text: AutoML を使用してタクシー料金を予測する
-      url: tutorial-auto-train-models.md
-    - text: Azure ML パイプラインを作成する
-      url: tutorial-pipeline-batch-scoring-classification.md
-    - text: 画像を分類する
-      url: tutorial-train-models-with-aml.md
-  - linkListType: how-to-guide
-    links:
-    - text: 環境の設定方法
-      url: how-to-configure-environment.md
-    - text: Scikit-learn モデルをトレーニングする
-      url: how-to-train-scikit-learn.md
-    - text: TensorFlow モデルをトレーニングする
-      url: how-to-train-tensorflow.md
-    - text: PyTorch モデルをトレーニングする
-      url: how-to-train-pytorch.md
-    - text: Keras モデルをトレーニングする
-      url: how-to-train-keras.md
-    - text: ML パイプラインとは
-      url: concept-ml-pipelines.md
-- title: リファレンス ドキュメントに移動する
-  linkLists:
   - linkListType: reference
     links:
-    - text: Python 用 SDK
+    - text: Python SDK
       url: https://docs.microsoft.com/python/api/overview/azure/ml/?view=azure-ml-py
-    - text: デザイナーのアルゴリズムとモジュール
-      url: algorithm-module-reference/module-reference.md
     - text: REST API
       url: https://docs.microsoft.com/rest/api/azureml/
     - text: Machine Learning CLI
       url: https://docs.microsoft.com/cli/azure/ext/azure-cli-ml/ml?view=azure-cli-latest
-    - text: AI リファレンス アーキテクチャ (GitHub)
-      url: https://github.com/Microsoft/AI
-    - text: R 用 SDK
-      url: https://azure.github.io/azureml-sdk-for-r/reference/index.html
