--- a/articles/machine-learning/toc.yml
+++ b/articles/machine-learning/toc.yml
@@ -166,9 +166,21 @@
               href: how-to-use-azure-ad-identity.md
         - name: ネットワークのセキュリティ
           items:
-            - name: 仮想ネットワークの使用
+            - name: 仮想ネットワークの概要
               displayName: 'vnet, blob'
-              href: how-to-enable-virtual-network.md
+              href: how-to-network-security-overview.md
+            - name: ワークスペース リソースの保護
+              displayName: 'vnet, workspace, container instance, container registry'
+              href: how-to-secure-workspace-vnet.md
+            - name: トレーニング環境の保護
+              displayName: vnet
+              href: how-to-secure-training-vnet.md
+            - name: 推論環境の保護
+              displayName: vnet
+              href: how-to-secure-inferencing-vnet.md
+            - name: 仮想ネットワークでスタジオを使用する
+              displayName: vnet
+              href: how-to-enable-studio-virtual-network.md
             - name: Private Link を使用する
               displayName: private endpoint
               href: how-to-configure-private-link.md
@@ -307,6 +319,9 @@
             - name: ハイパーパラメーターを調整する
               displayName: parameter
               href: how-to-tune-hyperparameters.md
+        - name: MLflow を操作する
+          displayName: 'log, monitor, deploy, metrics, Databricks, model registry, register'
+          href: how-to-use-mlflow.md
         - name: Scikit-learn
           href: how-to-train-scikit-learn.md
         - name: TensorFlow
@@ -328,9 +343,6 @@
             - name: ログを表示する
               displayName: 'troubleshoot, log, files, tracing'
               href: how-to-monitor-view-training-logs.md
-            - name: MLflow を使用して実験を追跡する
-              displayName: 'log, monitor, metrics, Databricks'
-              href: how-to-use-mlflow.md
             - name: TensorBoard を使用して実行を視覚化する
               displayName: 'log, monitor, metrics'
               href: how-to-monitor-tensorboard.md
