--- a/articles/sentinel/TOC.yml
+++ b/articles/sentinel/TOC.yml
@@ -50,17 +50,17 @@
               href: connect-azure-ad-identity-protection.md
             - name: Azure Information Protection
               href: connect-azure-information-protection.md
-            - name: Microsoft Defender ATP
+            - name: Microsoft Defender for Endpoint
               href: connect-microsoft-defender-advanced-threat-protection.md
-            - name: Azure ATP
+            - name: Microsoft Defender for Identity (旧称 Azure ATP)
               href: connect-azure-atp.md
             - name: Azure DDoS Protection
               href: connect-azure-ddos-protection.md
             - name: Azure Firewall
               href: connect-azure-firewall.md
-            - name: Azure Security Center
+            - name: ASC からの Azure Defender アラート
               href: connect-azure-security-center.md
-            - name: Azure Security Center for IoT
+            - name: IoT 用 Azure Defender (旧称 ASC)
               href: connect-asc-iot.md
             - name: Azure Web アプリケーション ファイアウォール (WAF)
               href: connect-azure-waf.md
@@ -114,6 +114,8 @@
               href: connect-vmware-carbon-black.md
             - name: Zimperium Mobile Threat Defense
               href: connect-zimperium-mtd.md
+            - name: Logstash を使用して接続する
+              href: connect-logstash.md
             - name: CEF ベースのソリューション
               href: connect-common-event-format.md
               items:
