--- a/articles/storage/blobs/TOC.yml
+++ b/articles/storage/blobs/TOC.yml
@@ -17,9 +17,9 @@
       items:
         - name: BLOB の使用
           items:
-            - name: Azure Portal
+            - name: Azure portal
               href: storage-quickstart-blobs-portal.md
-            - name: Storage Explorer
+            - name: ストレージ エクスプローラー
               href: storage-quickstart-blobs-storage-explorer.md
             - name: PowerShell
               href: storage-quickstart-blobs-powershell.md
@@ -310,7 +310,7 @@
               href: storage-blobs-list.md
             - name: BLOB プロパティとメタデータの管理 (.NET)
               href: storage-blob-properties-metadata.md
-            - name: BLOB のコピー (.NET)
+            - name: BLOB のコピー (SDK)
               href: storage-blob-copy.md
         - name: BLOB データへのアクセスの承認
           items:
@@ -496,7 +496,7 @@
           href: ../common/storage-account-move.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
         - name: 監視 (クラシック)
           items:
-            - name: Azure Portal での監視 (クラシック)
+            - name: Azure portal での監視 (クラシック)
               href: ../common/storage-monitor-storage-account.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
         - name: トラブルシューティング
           items:
@@ -558,15 +558,15 @@
       items:
         - name: Azure の更新情報
           href: 'https://azure.microsoft.com/updates/?product=storage'
-        - name: Azure Storage Explorer
+        - name: Azure ストレージ エクスプローラー
           items:
             - name: Storage Explorer のダウンロード
               href: 'https://azure.microsoft.com/features/storage-explorer/'
             - name: Storage Explorer の概要
               href: ../../vs-azure-tools-storage-manage-with-storage-explorer.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-            - name: Storage Explorer のリリース ノート
+            - name: ストレージ エクスプローラーのリリース ノート
               href: 'https://github.com/microsoft/AzureStorageExplorer/releases'
-            - name: Storage Explorer のトラブルシューティング
+            - name: ストレージ エクスプローラーのトラブルシューティング
               href: ../common/storage-explorer-troubleshooting.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
             - name: Storage Explorer のセキュリティ
               href: ../common/storage-explorer-security.md
@@ -574,7 +574,7 @@
               href: ../common/storage-explorer-blob-versioning.md
             - name: Storage Explorer のサポート ポリシーとライフサイクル
               href: ../common/storage-explorer-support-policy-lifecycle.md
-            - name: Storage Explorer のアクセシビリティ
+            - name: ストレージ エクスプローラーのアクセシビリティ
               href: ../../vs-azure-tools-storage-explorer-accessibility.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
         - name: Microsoft Q&A の Azure Storage
           href: 'https://docs.microsoft.com/answers/topics/azure-blob-storage.html'
@@ -676,7 +676,7 @@
               href: data-lake-storage-introduction-abfs-uri.md
             - name: 階層型名前空間について
               href: data-lake-storage-namespace.md
-        - name: セキュリティ
+        - name: Security
           items:
             - name: セキュリティに関する推奨事項
               href: security-recommendations.md
@@ -735,7 +735,7 @@
               href: data-lake-storage-directory-file-acl-powershell.md
             - name: CLI
               href: data-lake-storage-directory-file-acl-cli.md
-            - name: Storage Explorer
+            - name: ストレージ エクスプローラー
               href: data-lake-storage-explorer.md
             - name: Hadoop ファイル システム CLI
               href: data-lake-storage-use-hdfs-data-lake-storage.md
@@ -749,7 +749,7 @@
           items:
             - name: AzCopy
               items:
-                - name: 作業開始
+                - name: はじめに
                   href: ../common/storage-use-azcopy-v10.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
                 - name: Data Lake Storage の使用
                   href: ../common/storage-use-azcopy-blobs.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
@@ -839,15 +839,15 @@
           href: 'https://azure.microsoft.com/updates/?product=storage'
         - name: Azure Storage クライアント ツール
           href: ../common/storage-explorers.md?toc=%2fazure%2fstorage%2fdata-lake-storage%2ftoc.json
-        - name: Azure Storage Explorer
+        - name: Azure ストレージ エクスプローラー
           items:
             - name: Storage Explorer のダウンロード
               href: 'https://azure.microsoft.com/features/storage-explorer/'
             - name: Storage Explorer の概要
               href: ../../vs-azure-tools-storage-manage-with-storage-explorer.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-            - name: Storage Explorer のリリース ノート
+            - name: ストレージ エクスプローラーのリリース ノート
               href: 'https://github.com/microsoft/AzureStorageExplorer/releases'
-            - name: Storage Explorer のトラブルシューティング
+            - name: ストレージ エクスプローラーのトラブルシューティング
               href: ../common/storage-explorer-troubleshooting.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
             - name: Storage Explorer のセキュリティ
               href: ../common/storage-explorer-security.md
