--- a/articles/virtual-machines/windows/toc.yml
+++ b/articles/virtual-machines/windows/toc.yml
@@ -317,6 +317,8 @@
           href: disk-encryption.md
         - name: Disk Storage の予約
           href: ../../cost-management-billing/reservations/understand-disk-reservations.md?toc=%2fazure%2fvirtual-machines%2fwindows%2ftoc.json
+        - name: 仮想マシンとディスクのパフォーマンス
+          href: disk-performance-windows.md
         - name: 高パフォーマンス用の設計
           href: ../premium-storage-performance.md?toc=/azure/virtual-machines/windows/toc.json&bc=/azure/virtual-machines/windows/breadcrumb/toc.json
         - name: ディスク バースト
@@ -540,7 +542,7 @@
           href: download-vhd.md
     - name: VM のセキュリティ保護
       items:
-        - name: 推奨事項
+        - name: Recommendations
           href: security-recommendations.md
         - name: ジャストインタイム アクセス
           href: ../../security-center/security-center-just-in-time.md
