commit translated contents

--- a/articles/machine-learning/toc.yml
+++ b/articles/machine-learning/toc.yml
@@ -535,6 +535,9 @@
       href: reference-pipeline-yaml.md
     - name: ソブリン クラウドのパリティ
       href: reference-machine-learning-cloud-parity.md
+    - name: Azure Policy の組み込み
+      displayName: 'samples, policies, definitions'
+      href: ./policy-reference.md
 - name: リソース
   items:
     - name: リリース ノート
