--- a/articles/sentinel/TOC.yml
+++ b/articles/sentinel/TOC.yml
@@ -29,6 +29,10 @@
       href: fusion.md
     - name: ワークスペースおよびテナント全体での Azure Sentinel の拡張
       href: extend-sentinel-across-workspaces-tenants.md
+    - name: セキュリティ
+      items:
+        - name: セキュリティ ベースライン
+          href: security-baseline.md
 - name: 操作方法ガイド
   items:
     - name: データ ソースの接続
@@ -50,17 +54,17 @@
               href: connect-azure-ad-identity-protection.md
             - name: Azure Information Protection
               href: connect-azure-information-protection.md
-            - name: Microsoft Defender for Endpoint
+            - name: Microsoft Defender ATP
               href: connect-microsoft-defender-advanced-threat-protection.md
-            - name: Microsoft Defender for Identity (旧称 Azure ATP)
+            - name: Azure ATP
               href: connect-azure-atp.md
             - name: Azure DDoS Protection
               href: connect-azure-ddos-protection.md
             - name: Azure Firewall
               href: connect-azure-firewall.md
-            - name: ASC からの Azure Defender アラート
+            - name: Azure Security Center
               href: connect-azure-security-center.md
-            - name: IoT 用 Azure Defender (旧称 ASC)
+            - name: Azure Security Center for IoT
               href: connect-asc-iot.md
             - name: Azure Web アプリケーション ファイアウォール (WAF)
               href: connect-azure-waf.md
@@ -114,8 +118,6 @@
               href: connect-vmware-carbon-black.md
             - name: Zimperium Mobile Threat Defense
               href: connect-zimperium-mtd.md
-            - name: Logstash を使用して接続する
-              href: connect-logstash.md
             - name: CEF ベースのソリューション
               href: connect-common-event-format.md
               items:
