--- a/articles/storage/blobs/TOC.yml
+++ b/articles/storage/blobs/TOC.yml
@@ -317,7 +317,7 @@
             - name: ユーザーの承認オプション
               items:
                 - name: ポータル
-                  href: ../common/storage-access-blobs-queues-portal.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
+                  href: authorize-blob-access-portal.md
                 - name: PowerShell
                   href: ../common/authorize-active-directory-powershell.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
                 - name: Azure CLI
@@ -676,7 +676,7 @@
               href: data-lake-storage-introduction-abfs-uri.md
             - name: 階層型名前空間について
               href: data-lake-storage-namespace.md
-        - name: Security
+        - name: セキュリティ
           items:
             - name: セキュリティに関する推奨事項
               href: security-recommendations.md
@@ -749,7 +749,7 @@
           items:
             - name: AzCopy
               items:
-                - name: はじめに
+                - name: 作業開始
                   href: ../common/storage-use-azcopy-v10.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
                 - name: Data Lake Storage の使用
                   href: ../common/storage-use-azcopy-blobs.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
