commit translated contents

--- a/articles/advisor/toc.yml
+++ b/articles/advisor/toc.yml
@@ -41,6 +41,8 @@
       href: advisor-quick-fix.md
     - name: Azure Resource Graph の Advisor データ
       href: advisor-azure-resource-graph.md
+    - name: Advisor スコアの使用
+      href: azure-advisor-score.md
 - name: リファレンス
   items:
     - name: Security Center
