--- a/articles/index.yml
+++ b/articles/index.yml
@@ -10,15 +10,15 @@ metadata:
   ms.topic: hub-page
   author: rolyon
   ms.author: rolyon
-  ms.date: 07/27/2020
+  ms.date: 09/10/2020
   featureFlags:
   - clicktale
-  ms.openlocfilehash: 5f6ba56347f76cc707bea2b30fab16e46f8be963
-  ms.sourcegitcommit: 271601d3eeeb9422e36353d32d57bd6e331f4d7b
+  ms.openlocfilehash: 45bad2d581e33ff89dbd28827f81ef26bc835f0a
+  ms.sourcegitcommit: 43558caf1f3917f0c535ae0bf7ce7fe4723391f9
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 08/20/2020
-  ms.locfileid: "88651507"
+  ms.lasthandoff: 09/11/2020
+  ms.locfileid: "90019786"
 highlightedContent:
   items:
   - title: Azure 開発者向けファースト ステップ ガイド
@@ -174,13 +174,13 @@ productDirectory:
     azureCategories:
     - ai-machine-learning
     url: cognitive-services/face/index.yml
-  - title: Form Recognizer (プレビュー)
+  - title: Form Recognizer
     summary: フォームを認識する AI を利用したドキュメント抽出サービス
     imageSrc: https://static.docs.com/ui/media/product/azure/cognitive-services.svg
     azureCategories:
     - ai-machine-learning
     url: cognitive-services/form-recognizer/index.yml
-  - title: Immersive Reader (プレビュー)
+  - title: イマーシブ リーダー
     summary: すべての年齢や能力のユーザーがテキストを読んで理解できるようにします
     imageSrc: https://static.docs.com/ui/media/product/azure/cognitive-services.svg
     azureCategories:
@@ -260,7 +260,7 @@ productDirectory:
     azureCategories:
     - ai-machine-learning
     url: https://docs.microsoft.com/azure/cognitive-services/speech-service/index#pivot=start&panel=texttospeech
-  - title: Translator Text
+  - title: Translator
     summary: 単純な REST API 呼び出しで機械翻訳を簡単に行います
     imageSrc: https://static.docs.com/ui/media/product/azure/cognitive-services.svg
     azureCategories:
@@ -300,7 +300,7 @@ productDirectory:
     - storage
     url: data-share/index.yml
   - title: Azure Stream Analytics
-    summary: 数百万の IoT デバイスからのデータ ストリームをリアルタイムで処理
+    summary: アプリケーションやデバイスからのデータの高速移動ストリームのリアルタイム分析
     imageSrc: https://static.docs.com/ui/media/product/azure/stream-analytics.svg
     azureCategories:
     - analytics
@@ -374,7 +374,7 @@ productDirectory:
     - blockchain
     url: blockchain/workbench/index.yml
   - title: Azure Cosmos DB
-    summary: あらゆるスケールに対応するグローバル分散型のマルチモデル データベース
+    summary: あらゆる規模に対応するオープン API を備えた高速 NoSQL データベース。
     imageSrc: https://static.docs.com/ui/media/product/azure/cosmos-db.svg
     azureCategories:
     - featured
@@ -443,7 +443,7 @@ productDirectory:
     - compute
     - web
     url: spring-cloud/index.yml
-  - title: Azure VMware Solution
+  - title: Azure VMware Solution (プレビュー)
     summary: Azure でネイティブに VMware ワークロードを実行します
     imageSrc: ./media/index/azure-vmware.svg
     azureCategories:
@@ -475,12 +475,6 @@ productDirectory:
     - featured
     - compute
     url: virtual-machines/linux/index.yml
-  - title: SAP HANA on Azure Large Instances
-    summary: どのハイパースケール クラウド プロバイダーよりも大規模な SAP HANA ワークロードを実行
-    imageSrc: https://static.docs.com/ui/media/product/azure/sap.svg
-    azureCategories:
-    - compute
-    url: virtual-machines/workloads/sap/hana-overview-architecture.md
   - title: Service Fabric
     summary: マイクロサービスを開発し、Windows または Linux のコンテナーを調整
     imageSrc: https://static.docs.com/ui/media/product/azure/service-fabric-clusters.svg
@@ -488,15 +482,15 @@ productDirectory:
     - compute
     - containers
     url: service-fabric/index.yml
-  - title: Azure Virtual Machines における SQL Server
+  - title: Virtual Machines 上の SQL Server
     summary: エンタープライズ SQL Server アプリをクラウドでホスト
     imageSrc: https://static.docs.com/ui/media/product/azure/sql-server-vm.svg
     azureCategories:
     - compute
     - databases
     url: https://docs.microsoft.com/azure/virtual-machines/windows/sql/virtual-machines-windows-sql-server-iaas-overview?toc=%2Fazure%2Fvirtual-machines%2Fwindows%2Ftoc.json
-  - title: 静的 Web アプリ
-    summary: 完全なスタック Web アプリをビルドして GitHub リポジトリから Azure にデプロイする
+  - title: Static Web Apps (プレビュー)
+    summary: ソース コードからグローバルな高可用性まで、合理化されたフルスタック開発を実現する最新の Web アプリ サービス
     imageSrc: ./media/index/static-apps.svg
     azureCategories:
     - compute
@@ -766,12 +760,24 @@ productDirectory:
     azureCategories:
     - hybrid
     url: https://docs.microsoft.com/azure-stack/
-  - title: Azure Stack HCI ソリューション
-    summary: ハイパーコンバージド インフラストラクチャ (HCI) ソリューションを使用して、仮想マシンをオンプレミスで実行し、Azure に簡単に接続できます。
-    imageSrc: ./media/index/azure-stack-hci.svg
+  - title: Azure Stack HCI (プレビュー)
+    summary: ハイパーコンバージド インフラストラクチャと Azure およびハイブリッド サービスを統合して、オンプレミスで仮想ワークロードを実行
+    imageSrc: https://static.docs.com/ui/media/product/azure/stack-hci.svg
     azureCategories:
     - hybrid
     url: https://docs.microsoft.com/azure-stack/hci/
+  - title: Azure Stack Hub
+    summary: Azure Stack Hub は統合ハードウェア システムとして販売されており、ソフトウェアは検証済みハードウェアに事前にインストールされています
+    imageSrc: https://static.docs.com/ui/media/product/azure/stack-hub.svg
+    azureCategories:
+    - hybrid
+    url: https://docs.microsoft.com/azure-stack/operator/
+  - title: Azure Stack Edge
+    summary: Azure のコンピューティング、ストレージ、インテリジェンスをエッジにもたらす Azure マネージド アプライアンス
+    imageSrc: https://static.docs.com/ui/media/product/azure/stack-edge.svg
+    azureCategories:
+    - hybrid
+    url: https://docs.microsoft.com/azure/databox-online/
   - title: Security Center
     summary: セキュリティ管理を統合し、高度な脅威保護をハイブリッド クラウド ワークロード間で有効化
     imageSrc: https://static.docs.com/ui/media/product/azure/security-center.svg
@@ -786,12 +792,12 @@ productDirectory:
     - hybrid
     - iot
     url: iot-edge/index.yml
-  - title: Azure Active Directory B2C
+  - title: Azure Active Directory External Identities
     summary: コンシューマーの ID とアクセスの管理をクラウドで実行
     imageSrc: https://static.docs.com/ui/media/product/azure/active-directory-b2c.svg
     azureCategories:
     - identity
-    url: active-directory-b2c/index.yml
+    url: active-directory/external-identities/index.yml
   - title: Azure Active Directory Domain Services
     summary: ドメイン コントローラーを使用せずにドメインに Azure 仮想マシンを参加させる
     imageSrc: https://static.docs.com/ui/media/product/azure/ad-domain-services.svg
@@ -894,7 +900,7 @@ productDirectory:
     - iot
     - security
     url: asc-for-iot/index.yml
-  - title: オートメーション
+  - title: Automation
     summary: プロセス自動化でクラウド管理を簡素化
     imageSrc: https://static.docs.com/ui/media/product/azure/automation.svg
     azureCategories:
@@ -950,6 +956,12 @@ productDirectory:
     azureCategories:
     - management-and-governance
     url: azure-resource-manager/index.yml
+  - title: Azure Resource Mover
+    summary: Azure リージョン間でリソースを移動
+    imageSrc: https://static.docs.com/ui/media/product/azure/resource-mover.svg
+    azureCategories:
+    - management-and-governance
+    url: resource-mover/index.yml
   - title: ARM テンプレート
     summary: Resource Manager を使用して、あらゆる Azure リソース向けにコードとしてのインフラストラクチャを提供
     imageSrc: https://static.docs.com/ui/media/product/azure/resource-groups.svg
@@ -995,12 +1007,6 @@ productDirectory:
     - management-and-governance
     - networking
     url: network-watcher/index.yml
-  - title: Scheduler
-    summary: 単純または複雑な定期的スケジュールでジョブを実行
-    imageSrc: https://static.docs.com/ui/media/product/azure/scheduler.svg
-    azureCategories:
-    - management-and-governance
-    url: scheduler/index.yml
   - title: Traffic Manager
     summary: 高パフォーマンスと高可用性のために着信トラフィックをルーティング
     imageSrc: https://static.docs.com/ui/media/product/azure/traffic-manager.svg
@@ -1040,6 +1046,12 @@ productDirectory:
     azureCategories:
     - media
     url: media-services/latest/stream-live-tutorial-with-api.md
+  - title: Live Video Analytics (プレビュー)
+    summary: 任意の AI を使用してインテリジェントなビデオベースのアプリケーションを作成
+    imageSrc: https://static.docs.com/ui/media/product/azure/media-services.svg
+    azureCategories:
+    - media
+    url: media-services/live-video-analytics-edge/overview.md
   - title: Media Services
     summary: 大規模にビデオおよびオーディオをエンコード、保存、ストリーミング
     imageSrc: https://static.docs.com/ui/media/product/azure/media-services.svg
@@ -1121,6 +1133,7 @@ productDirectory:
     imageSrc: https://static.docs.com/ui/media/product/azure/front-door.svg
     azureCategories:
     - networking
+    - security
     url: frontdoor/index.yml
   - title: Azure Internet Analyzer (プレビュー)
     summary: ネットワーク インフラストラクチャの変更が顧客のパフォーマンスに及ぼす影響を評価します
@@ -1164,6 +1177,7 @@ productDirectory:
     imageSrc: https://static.docs.com/ui/media/product/azure/frontdoor-waf-policies.svg
     azureCategories:
     - networking
+    - security
     url: web-application-firewall/index.yml
   - title: Azure の専用 HSM
     summary: クラウドで使用するハードウェア セキュリティ モジュールを管理します
@@ -1214,7 +1228,7 @@ productDirectory:
     - storage
     url: storage/blobs/index.yml
   - title: Disk Storage
-    summary: 仮想マシンに対応しセキュリティ保護された永続ディスク
+    summary: Azure Virtual Machines 向けの高パフォーマンスで持続性の高いブロック ストレージ
     imageSrc: https://static.docs.com/ui/media/product/azure/disk-storage.svg
     azureCategories:
     - storage
@@ -1225,12 +1239,6 @@ productDirectory:
     azureCategories:
     - storage
     url: storage/files/index.yml
-  - title: Managed Disks
-    summary: Azure 仮想マシン向けの安全で永続的なディスク ストレージ
-    imageSrc: https://static.docs.com/ui/media/product/azure/disk.svg
-    azureCategories:
-    - storage
-    url: virtual-machines/managed-disks-overview.md
   - title: Queue Storage
     summary: トラフィックに応じてアプリを効率的にスケーリング
     imageSrc: https://static.docs.com/ui/media/product/azure/storage-accounts.svg
@@ -1238,7 +1246,7 @@ productDirectory:
     - storage
     url: storage/queues/index.yml
   - title: ストレージ
-    summary: データ、アプリ、ワークロード用の、安全で大規模に拡張可能なクラウド ストレージを実現します
+    summary: 耐久性があり、高度にスケーラブルな高可用性クラウド ストレージ
     imageSrc: https://static.docs.com/ui/media/product/azure/storage-accounts.svg
     azureCategories:
     - storage
