--- a/articles/iot-central/core/index.yml
+++ b/articles/iot-central/core/index.yml
@@ -9,13 +9,13 @@ metadata:
   ms.topic: landing-page
   author: philmea
   ms.author: philmea
-  ms.date: 02/18/2020
-  ms.openlocfilehash: 6f8cabab3b2feaa219c52c4ed8c53d1cccb4b658
-  ms.sourcegitcommit: 46f8457ccb224eb000799ec81ed5b3ea93a6f06f
+  ms.date: 06/21/2020
+  ms.openlocfilehash: 870895980c90262a20cfd5ea95a4fdb01b39b4a3
+  ms.sourcegitcommit: 43558caf1f3917f0c535ae0bf7ce7fe4723391f9
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 07/28/2020
-  ms.locfileid: "87337196"
+  ms.lasthandoff: 09/11/2020
+  ms.locfileid: "90015876"
 landingContent:
 - title: Azure IoT Central について
   linkLists:
@@ -25,8 +25,6 @@ landingContent:
       url: overview-iot-central.md
     - text: UI を確認する
       url: overview-iot-central-tour.md
-    - text: デバイス開発
-      url: overview-iot-central-developer.md
     - text: 最新の更新
       url: https://azure.microsoft.com/updates/?status=nowavailable&updateType=features&category=iot&query=azure%20iot%20central
   - linkListType: architecture
@@ -39,18 +37,34 @@ landingContent:
     links:
     - text: 新しいアプリケーションを作成する
       url: quick-deploy-iot-central.md
-- title: 接続する
+- title: デバイスを接続して開発する
   linkLists:
+  - linkListType: overview
+    links:
+    - text: デバイス開発者向けの概要
+      url: overview-iot-central-developer.md
   - linkListType: tutorial
     links:
-    - text: デバイスの接続
-      url: tutorial-connect-device.md
+    - text: デバイスの接続 (Node.js)
+      url: tutorial-connect-device-nodejs.md
+    - text: デバイスの接続 (Python)
+      url: tutorial-connect-device-python.md
+  - linkListType: concept
+    links:
+    - text: デバイスの接続性
+      url: concepts-get-connected.md
+    - text: デバイス テンプレート
+      url: concepts-device-templates.md
+    - text: メッセージのペイロード
+      url: concepts-telemetry-properties-commands.md
   - linkListType: how-to-guide
     links:
-    - text: デバイス テンプレートを設定する
+    - text: テンプレートを設定する
       url: howto-set-up-template.md
-    - text: その他の IoT クラウドの接続
-      url: howto-build-iotc-device-bridge.md
+    - text: Azure Sphere デバイスを接続する
+      url: howto-connect-sphere.md
+    - text: デバイス接続のトラブルシューティング
+      url: troubleshoot-connection.md
 - title: 接続を維持する
   linkLists:
   - linkListType: tutorial
