--- a/articles/iot-central/energy/toc.yml
+++ b/articles/iot-central/energy/toc.yml
@@ -20,7 +20,7 @@
       href: ../core/concepts-app-templates.md?toc=/azure/iot-central/energy/toc.json&bc=/azure/iot-central/energy/breadcrumb/toc.json
 - name: 操作方法ガイド
   items:
-    - name: デバイスの接続
+    - name: デバイスを接続して開発する
       items:
         - name: Rigado Cascade 500 を準備して接続する
           href: ../core/howto-connect-rigado-cascade-500.md?toc=/azure/iot-central/energy/toc.json&bc=/azure/iot-central/energy/breadcrumb/toc.json
