--- a/articles/iot-central/index.yml
+++ b/articles/iot-central/index.yml
@@ -9,13 +9,13 @@ metadata:
   ms.topic: hub-page
   author: philmea
   ms.author: philmea
-  ms.date: 10/25/2019
-  ms.openlocfilehash: 64e20f9a06acf85def278c1017bbbd588c7a6b39
-  ms.sourcegitcommit: ac5cbef0706d9910a76e4c0841fdac3ef8ed2e82
+  ms.date: 06/30/2020
+  ms.openlocfilehash: 48af60c579a3b9f75c81fdab15553b535e72760c
+  ms.sourcegitcommit: 43558caf1f3917f0c535ae0bf7ce7fe4723391f9
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 09/03/2020
-  ms.locfileid: "89425978"
+  ms.lasthandoff: 09/11/2020
+  ms.locfileid: "90016743"
 highlightedContent:
   items:
   - title: IoT Central とは
@@ -24,9 +24,9 @@ highlightedContent:
   - title: アプリケーション テンプレートとは
     itemType: concept
     url: ./core/concepts-app-templates.md
-  - title: Azure IoT Central のアーキテクチャ
-    itemType: architecture
-    url: ./core/concepts-architecture.md
+  - title: IoT Central デバイスの開発の概要
+    itemType: overview
+    url: ./core/overview-iot-central-developer.md
   - title: 新しいアプリケーションを作成する
     itemType: quickstart
     url: ./core/quick-deploy-iot-central.md
@@ -38,11 +38,20 @@ highlightedContent:
     url: ./core/tutorial-create-telemetry-rules.md
 conceptualContent:
   items:
-  - title: 接続する
+  - title: デバイスを接続して開発する
     links:
-    - url: ./core/howto-set-up-template.md
+    - url: ./core/tutorial-connect-device-nodejs.md
+      itemType: tutorial
+      text: デバイスの接続
+    - url: ./core/concepts-get-connected.md
+      itemType: concept
+      text: デバイスの接続性
+    - url: ./core/concepts-device-templates.md
+      itemType: concept
+      text: デバイス テンプレート
+    - url: ./core/troubleshoot-connection.md
       itemType: how-to-guide
-      text: デバイス テンプレートを設定する
+      text: デバイス接続のトラブルシューティング
     footerLink:
       url: ./core/index.yml
       text: 詳細情報
