--- a/articles/iot-central/retail/index.yml
+++ b/articles/iot-central/retail/index.yml
@@ -10,12 +10,12 @@ metadata:
   author: philmea
   ms.author: philmea
   ms.date: 10/25/2019
-  ms.openlocfilehash: f37f876db15e2722907669cd1c1d8390f771034b
-  ms.sourcegitcommit: 2ffa5bae1545c660d6f3b62f31c4efa69c1e957f
+  ms.openlocfilehash: 8469f67967f311d4aca98417e8a5a639665b4641
+  ms.sourcegitcommit: 43558caf1f3917f0c535ae0bf7ce7fe4723391f9
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 08/11/2020
-  ms.locfileid: "88080645"
+  ms.lasthandoff: 09/11/2020
+  ms.locfileid: "90014924"
 landingContent:
 - title: 小売ソリューションを構築する
   linkLists:
@@ -43,18 +43,32 @@ landingContent:
     links:
     - text: Rigado Cascade 500 を接続する
       url: ../core/howto-connect-rigado-cascade-500.md
-- title: 接続する
+- title: デバイスを接続して開発する
   linkLists:
+  - linkListType: overview
+    links:
+    - text: デバイス開発者向けの概要
+      url: ../core/overview-iot-central-developer.md
   - linkListType: tutorial
     links:
-    - text: デバイス テンプレートを設定する
-      url: ../core/howto-set-up-template.md
-    - text: デバイスの接続
-      url: ../core/tutorial-connect-device.md
+    - text: デバイスの接続 (Node.js)
+      url: ../core/tutorial-connect-device-nodejs.md
+    - text: デバイスの接続 (Python)
+      url: ../core/tutorial-connect-device-python.md
+  - linkListType: concept
+    links:
+    - text: デバイスの接続性
+      url: ../core/concepts-get-connected.md
+    - text: デバイス テンプレート
+      url: ../core/concepts-device-templates.md
   - linkListType: how-to-guide
     links:
-    - text: その他の IoT クラウドの接続
-      url: ../core/howto-build-iotc-device-bridge.md
+    - text: テンプレートを設定する
+      url: ../core/howto-set-up-template.md
+    - text: Azure Sphere デバイスを接続する
+      url: ../core/howto-connect-sphere.md
+    - text: デバイス接続のトラブルシューティング
+      url: ../core/troubleshoot-connection.md
 - title: 接続を維持する
   linkLists:
   - linkListType: tutorial
