--- a/articles/security/benchmarks/TOC.yml
+++ b/articles/security/benchmarks/TOC.yml
@@ -61,6 +61,8 @@
       href: ../../azure-databricks/security-baseline.md
     - name: Azure DNS のセキュリティ ベースライン
       href: ../../dns/security-baseline.md
+    - name: Azure DevTest Labs のセキュリティ ベースライン
+      href: ../../devtest-labs/security-baseline.md
     - name: Azure Firewall のセキュリティ ベースライン
       href: ../../firewall/security-baseline.md
     - name: Azure Functions のセキュリティ ベースライン
@@ -73,8 +75,14 @@
       href: ../../machine-learning/security-baseline.md
     - name: Azure Policy のセキュリティ ベースライン
       href: ../../governance/policy/concepts/azure-security-benchmark-baseline.md
+    - name: Azure Private Link のセキュリティ ベースライン
+      href: ../../private-link/security-baseline.md
+    - name: Azure パブリック IP のセキュリティ ベースライン
+      href: ../../virtual-network/public-ip-security-baseline.md
     - name: Azure Resource Graph のセキュリティ ベースライン
       href: ../../governance/resource-graph/concepts/azure-security-benchmark-baseline.md
+    - name: Azure Sentinel のセキュリティ ベースライン
+      href: ../../sentinel/security-baseline.md
     - name: Azure SQL Database のセキュリティ ベースライン
       href: ../../sql-database/security-baseline.md
     - name: Azure Storage のセキュリティ ベースライン
